--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
       name="Nehal's Portfolio"
       content="Web site created using create-react-app"
     />
-    <meta property="og:title" content="Ashutosh Hathidara Portfolio" />
+    <meta property="og:title" content="Nehal Ahmad's Portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ashutosh1919.github.io/" />
+    <meta property="og:url" content="https://github.com/nehal119" />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
@@ -31,28 +31,29 @@
     <meta name="theme-color" content="#000000">
 
     <!--Adsense Advertisement-->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
       (adsbygoogle = window.adsbygoogle || []).push({
         google_ad_client: "ca-pub-8856447829714090",
         enable_page_level_ads: true
       });
-    </script>
+    </script> -->
 
-    <!-- Global site tag (gtag.js) - Google Ads: 825508380 --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-825508380"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-825508380'); </script>
+    <!-- Global site tag (gtag.js) - Google Ads: 825508380 -->
+      <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=AW-825508380"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-825508380'); </script> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158726526-1"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158726526-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() { dataLayer.push(arguments); }
       gtag('js', new Date());
 
       gtag('config', 'UA-158726526-1');
-    </script>
+    </script> -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <link
